(update) overwrite some config in gulpfile

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "gulp-inject-string": "^1.1.2",
     "gulp-rename": "^2.0.0",
     "gulp-uglify": "^3.0.2",
-    "natives": "^1.1.6"
+    "natives": "^1.1.6",
+    "openpixel": "^1.3.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
